// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldAuthentication basic behavior should resolve all fields correctly with default plugin values - authenticated 1`] = `
Object {
  "data": Object {
    "me1": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me2": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me3": null,
    "me4": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me5": Object {
      "id": "totally-different-than-the-logged",
      "name": "another-user",
    },
    "me6": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me7": null,
  },
  "errors": Array [
    [GraphQLError: Invalid - Authenticated],
  ],
}
`;

exports[`fieldAuthentication basic behavior should resolve all fields correctly with default plugin values - unauthenticated 1`] = `
Object {
  "data": Object {
    "me1": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me2": null,
    "me3": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me4": Object {
      "id": "unauthenticated",
      "name": "guest",
    },
    "me5": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me6": null,
    "me7": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
  },
  "errors": Array [
    [GraphQLError: Invalid - Unauthenticated],
  ],
}
`;

exports[`fieldAuthentication basic behavior throwErrorOnFailedAuthenticationByDefault = true / defaultErrorMessage = something 1`] = `
Object {
  "data": Object {
    "me1": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me2": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me3": null,
    "me4": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me5": Object {
      "id": "totally-different-than-the-logged",
      "name": "another-user",
    },
    "me6": Object {
      "id": "8a291df8-bbcf-11ea-9db0-ff6b23713451",
      "name": "user-a",
    },
    "me7": null,
  },
  "errors": Array [
    [GraphQLError: You need to be authenticated],
    [GraphQLError: Invalid - Authenticated],
  ],
}
`;
